    - Added new C++ API method Sampler::SetGlobalMaxStreams().
    - Various "const" and "restrict" optimizations.
    - all engines: add pan CC value to instrument pan parameter before
      applying panning, instead of using two separate pan functions in
      series (#182)
    - added a lock guard class for exception safe mutex handling and
      used it everywhere appropriate

  * Gigasampler format engine:
    - implemented the "round robin keyboard" dimension
    - fixed round robin and random dimensions for cases when number of
      dimension zones is not a power of two
    - made round robin use a counter for each region instead of each
      key
    - bugfix: pitch LFO controller "internal+aftertouch" was broken
    - bugfix: filter keyboard tracking was broken
    - filter performance fix (an unnecessary copy was made of the
      filter parameters in each sub fragment)
    - handle special case when pan parameter in gig file has max or
      min value
    - Exclusive Groups: don't ever stop voices of the same note,
      doesn't sound naturally with a drumkit
    - fixed EG1 modulation when attack or release is zero

  * SFZ format engine:
    - Initial implementation (not usable yet)
    - added support for v2 multiple stage envelope generators
    - added a fine-tuned v1 envelope generator instead of using the
      one from the gig engine
    - fixed memory leak and memory handling errors
    - added support for trigger=first, trigger=legato and sw_previous
    - allow non-numerical key values ("C#4" for example)
    - "key" opcode now sets pitch_keycenter too
    - fixed error when unloading instrument with same sample used by
      multiple regions
    - added some opcode aliases, like loopmode for loop_mode, to be
      more compatible
    - added support for trigger=release and rt_decay
    - added support for off_mode=normal
    - added support for random, seq_position, seq_length and volume