@@ -123,6 +123,7 @@ namespace LinuxSampler {
             void UpdatePortamentoPos(Pool<Event>::Iterator& itNoteOffEvent);
             void Kill(Pool<Event>::Iterator& itKillEvent);
             void CreateEq();
+            void onScaleTuningChanged();
 
             bool                Orphan;             ///< true if this voice is playing a sample from an instrument that is unloaded. When the voice dies, the sample (and dimension region) will be handed back to the instrument resource manager.
             playback_state_t    PlaybackState;      ///< When a sample will be triggered, it will be first played from RAM cache and after a couple of sample points it will switch to disk streaming and at the end of a disk stream we have to add null samples, so the interpolator can do it's work correctly
